--- a/App.config
+++ b/App.config
@@ -15,6 +15,15 @@
             <setting name="Windows" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AmateurBands" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Age" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Update" serializeAs="String">
+                <value />
+            </setting>
         </WSI.My.MySettings>
     </userSettings>
 </configuration>
