--- a/App.config
+++ b/App.config
@@ -24,6 +24,9 @@
             <setting name="Update" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Alert" serializeAs="String">
+                <value />
+            </setting>
         </WSI.My.MySettings>
     </userSettings>
 </configuration>
