--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="Update" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Alert" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
